--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body{
     background-image:url(1.jpg);
+    background-repeat:no-repeat;
+    background-position:center;
+    background-size:cover;
 
 }
    
